# structure_descent

./: .env.example  .gitignore  NOTES.md  README.md  pyproject.toml  requirements.txt
_archived_pre_fix/: poleu_pre_fix_seed99_metrics_test.json
configs/: ablation_K1.yaml  ablation_K5.yaml  ablation_K7.yaml  ablation_M10.yaml  ablation_M20.yaml  ablation_M3.yaml  ablation_concat_utility.yaml  ablation_encoder_1024.yaml  ablation_film_utility.yaml  ablation_generator_alt.yaml  ablation_no_subsample.yaml  ablation_person_heads.yaml  ablation_softplus_weights.yaml  ablation_tau_0p5.yaml  ablation_tau_2p0.yaml  ablation_uniform_salience.yaml  default.yaml  v3_anchored.yaml
docs/: adaptive_depth_expansion.md  baselines.md  evaluation_runbook.md  implementation_report.tex  interpretability_tax.md  paper_evaluation_additions.md  pipeline_memo.tex  potential_ideas.md  redesign.md  refine_improvements.md  residual_lr_multiplier_ablation_mobility.md  session_changelog.md  subagents.md  worked_example.tex
embeddings_cache/: embeddings.sqlite-shm  embeddings.sqlite-wal
notebooks/: 01_data_preparation.ipynb  02_dsl_features.ipynb  03_inner_loop.ipynb  04_outer_loop_llm.ipynb  05_evaluation.ipynb
old_pipeline/: README.md  document.tex  run_pipeline.ipynb
outcomes_cache/: outcomes.sqlite-shm  outcomes.sqlite-wal
scripts/: _ablate_residual_lr_mult_mobility.sh  _analyze_residual_lr_mult_mobility.py  customer_analysis.py  identify_failure_events.py  launch_mobility_seedsweep.sh  launch_seedsweep.sh  paired_significance.py  prepare_mobility_dataset.py  refine_outcomes.py  (+8 more)
(+178 files in other folders)
